ocotillo_mpi/reduction_contar_primos/C/slurm-4036.out
	 Intel oneAPI 2021
▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒ Iniciando ejecuccion ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 > Bitacora: prueba 
 > ID de los resultados: 12_04_2023_09_20_05
	•Resultados en: 'r_12_04_2023_09_20_05'
======================= Compilando archivos :: 09:20 =======================
_______________ Compilando el archivo secuencial _______________
-------------------------------------------------------------

________________ Compilando el archivo paralelo ________________
./paralelo.c: In function ‘main’:
./paralelo.c:50:30: error: expected expression before ‘,’ token
     printf("%i ,%f ,%i \n",  ,time_spent,procesadores, resultado_global);
                              ^
-------------------------------------------------------------

 > Inicia la corrida de ejecutables
--------------- corrida secuencial :: 09:20 ---------------
~~~~~~~~~~~~~ Ejecucion con 1 hilos :: 09:20 ~~~~~~~~~~~~~
[mpiexec@nodo16] check_exit_codes (../../../../../src/pm/i_hydra/libhydra/demux/hydra_demux_poll.c:117): unable to run bstrap_proxy on nodo16 (pid 76600, exit code 42752)
[mpiexec@nodo16] poll_for_event (../../../../../src/pm/i_hydra/libhydra/demux/hydra_demux_poll.c:159): check exit codes error
[mpiexec@nodo16] HYD_dmx_poll_wait_for_proxy_event (../../../../../src/pm/i_hydra/libhydra/demux/hydra_demux_poll.c:212): poll for event error
[mpiexec@nodo16] HYD_bstrap_setup (../../../../../src/pm/i_hydra/libhydra/bstrap/src/intel/i_hydra_bstrap.c:772): error waiting for event
[mpiexec@nodo16] main (../../../../../src/pm/i_hydra/mpiexec/mpiexec.c:1955): error setting up the boostrap proxies
~~~~~~~~~~~~~ Ejecucion con 2 hilos :: 09:21 ~~~~~~~~~~~~~
[mpiexec@nodo16] check_exit_codes (../../../../../src/pm/i_hydra/libhydra/demux/hydra_demux_poll.c:117): unable to run bstrap_proxy on nodo16 (pid 76635, exit code 42752)
[mpiexec@nodo16] poll_for_event (../../../../../src/pm/i_hydra/libhydra/demux/hydra_demux_poll.c:159): check exit codes error
[mpiexec@nodo16] HYD_dmx_poll_wait_for_proxy_event (../../../../../src/pm/i_hydra/libhydra/demux/hydra_demux_poll.c:212): poll for event error
[mpiexec@nodo16] HYD_bstrap_setup (../../../../../src/pm/i_hydra/libhydra/bstrap/src/intel/i_hydra_bstrap.c:772): error waiting for event
[mpiexec@nodo16] main (../../../../../src/pm/i_hydra/mpiexec/mpiexec.c:1955): error setting up the boostrap proxies
~~~~~~~~~~~~~ Ejecucion con 3 hilos :: 09:22 ~~~~~~~~~~~~~
[mpiexec@nodo16] check_exit_codes (../../../../../src/pm/i_hydra/libhydra/demux/hydra_demux_poll.c:117): unable to run bstrap_proxy on nodo16 (pid 76671, exit code 42752)
[mpiexec@nodo16] poll_for_event (../../../../../src/pm/i_hydra/libhydra/demux/hydra_demux_poll.c:159): check exit codes error
[mpiexec@nodo16] HYD_dmx_poll_wait_for_proxy_event (../../../../../src/pm/i_hydra/libhydra/demux/hydra_demux_poll.c:212): poll for event error
[mpiexec@nodo16] HYD_bstrap_setup (../../../../../src/pm/i_hydra/libhydra/bstrap/src/intel/i_hydra_bstrap.c:772): error waiting for event
[mpiexec@nodo16] main (../../../../../src/pm/i_hydra/mpiexec/mpiexec.c:1955): error setting up the boostrap proxies
~~~~~~~~~~~~~ Ejecucion con 4 hilos :: 09:23 ~~~~~~~~~~~~~
[mpiexec@nodo16] check_exit_codes (../../../../../src/pm/i_hydra/libhydra/demux/hydra_demux_poll.c:117): unable to run bstrap_proxy on nodo16 (pid 76706, exit code 42752)
[mpiexec@nodo16] poll_for_event (../../../../../src/pm/i_hydra/libhydra/demux/hydra_demux_poll.c:159): check exit codes error
[mpiexec@nodo16] HYD_dmx_poll_wait_for_proxy_event (../../../../../src/pm/i_hydra/libhydra/demux/hydra_demux_poll.c:212): poll for event error
[mpiexec@nodo16] HYD_bstrap_setup (../../../../../src/pm/i_hydra/libhydra/bstrap/src/intel/i_hydra_bstrap.c:772): error waiting for event
[mpiexec@nodo16] main (../../../../../src/pm/i_hydra/mpiexec/mpiexec.c:1955): error setting up the boostrap proxies
░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ Ejecuccion terminada ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
